examples/fail/unbound_var.uplp
-- category = "error"
--
-- [metadata]
-- error = "Parse.unbound_var"
--
-- [metadata.expectation]
-- ident = "not_a_bound_identifier"
not_a_bound_identifier